kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-deployment
  namespace: homework
  labels:
    app: web-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: web-server
        image: python:3.9-slim
        command: ["python3", "-m", "http.server", "8000", "--directory", "/homework"]
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: shared-data
          mountPath: /homework

        - name: config-volume
          mountPath: /homework/conf
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          failureThreshold: 3
          periodSeconds: 10
      volumes:

      - name: shared-data
        persistentVolumeClaim:
          claimName: homework-pvc

      - name: config-volume
        configMap:
          name: homework-config
