kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: web-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
